--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 .idea
 __pycache__/
 *.pdf
+pred
+samples
+splits
+imgs
+boxes
+adsf
+archive
+nas_archive
+score_scan_ocr/split_parts/data
+score_scan_ocr/split_parts/validated_data
+flask_ui/static/temp
